--- a/assets/sass/partials/_cards.scss
+++ b/assets/sass/partials/_cards.scss
@@ -156,6 +156,7 @@
         height: 100%;
         border-radius: 12px 12px 0px 0px;
         padding: 1rem 1rem;
+        overflow: hidden;
 
 
 
